Fixed Review dark mode

--- a/src/pages/vendor-review/vendor-review.scss
+++ b/src/pages/vendor-review/vendor-review.scss
@@ -1,3 +1,6 @@
 page-vendor-review {
-
+    #contentDark{
+        background-color:  #1C1C1C !important;
+        color:white;
+    }
 }
